# plgt-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  justfile  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml  sync-docs.yml
docs/cli/: add.mdx  auth-create-key.mdx  auth-list-keys.mdx  auth-login.mdx  auth-revoke-key.mdx  auth-sync.mdx  build.mdx  configure-defaults.mdx  configure-refresh.mdx  extension-create.mdx  extension-delete.mdx  extension-get.mdx  extension-list.mdx  extension-update.mdx  format.mdx  get-lifecycle-validation-report.mdx  index.mdx  init.mdx  install.mdx  list-lifecycle-commands.mdx  list.mdx  lsp.mdx  migration-diff.mdx  migration-new.mdx  publish.mdx  remove.mdx  schema-describe.mdx  schema-list.mdx  schema-search.mdx  secrets-get.mdx  secrets-list.mdx  secrets-set.mdx  set-auto-update.mdx  sync.mdx  ui-build.mdx  ui-preview.mdx  uninstall.mdx  unyank.mdx  validate.mdx  version.mdx  (+1 more)
plgt/: __main__.py
plgt/clients/: extension_client.py  lifecycle_command_client.py  publish_client.py  registry_client.py  secrets_client.py  variables_client.py  workspace_packages_client.py
plgt/cmd/: auth.py  configure.py  extensions.py  format.py  init.py  lifecycle.py  lsp.py  migration.py  publish.py  schema.py  secrets.py  ui.py  validate.py  variables.py
plgt/core/: __init__.py  _cache.py  _config.py  crypto.py  decorators.py  discovery.py  exceptions.py  logs.py  sessions.py  settings.py  utils.py
plgt/editors/: __init__.py
plgt/models/: build_types.py  install.py  lifecycle_command.py  secret.py  variable.py
plgt/services/: archive_service.py  artifact_service.py  bindings.py  build_progress.py  build_service.py  command_monitor.py  (+14 more)
scripts/: gen_cli_docs.py  gen_cli_surface.py
surface/: cli.json
(+87 files in other folders)
