[project]
name = "plgt"
version = "0.1.0b7"
description = "Poliglot developer CLI"
readme = "README.md"
requires-python = ">=3.12, <3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

authors = [{name = "Poliglot Inc."}]
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.1.0",
    "jinja2>=3.1.0",
    "oauthlib>=3.2.2",
    "owlrl>=7.1.3",
    "pynacl>=1.5.0",
    "pygls>=2.0.0",
    "pyshacl>=0.30.1",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.0",
    "rdflib>=7.1.1",
    "ruamel.yaml>=0.18.0",
    "requests>=2.32.3",
    "semver>=3.0.0",
    "rich>=13.9.4",
    "sseclient-py>=1.8.0",
    "typer>=0.15.1",
    "validators>=0.34.0",
]

[project.urls]
Documentation = "https://poliglot.io/docs/cli"
Homepage = "https://poliglot.io"
Repository = "https://github.com/poliglot-io/plgt-cli"
Issues = "https://github.com/poliglot-io/plgt-cli/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.1.0",
    "types-requests>=2.32.4.20250913",
    "types-pyyaml>=6.0.12.20250915",
    "ruff>=0.13.1",
    "pre-commit>=4.0.0",
]

[project.scripts]
plgt = "plgt.__main__:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
  "."
]
markers = [
    "slow: marks tests as slow running tests",
]
testpaths = [
    "test"
]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["plgt*"]
exclude = ["test*"]

[tool.setuptools.package-data]
"plgt.templates" = ["*.j2"]
"plgt.editors.vscode" = ["*.vsix"]
"plgt.services.shapes" = ["*.ttl"]
